--- a/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaignForm.cshtml
@@ -118,7 +118,7 @@
                         <div class="col-md-6">
                             <label>Start Date<span class="text-danger lb-sm">(Format: MM/DD/YYYY) *</span></label>
                             <div class="form-group">
-                                <div class="col-md-6 date datealign mrm-cal">
+                                <div id="dvStartDate" class="col-md-6 date datealign mrm-cal" onclick="HighlightSelectedDate()">
                                     <div class="input-group input-append date">
                                         @Html.TextBoxFor(m => m.StartDate, (Model.Id != 0 && Model.Status == "Complete") ?
                                             (object)new { disabled = "disabled", @class = "form-control mrm-cal", @maxlength = "10" } :
