--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -228,14 +228,17 @@
             $('#' + selectallElement).trigger('chosen:updated');
         }
     }
+
+    //Set scroll on multi select
+    $("ul.chosen-choices").css({ 'overflow': 'auto', 'max-height': '80px' });
 </script>
 <style>
     /*.ui-widget-content{border:0px solid #fff !important}*/
-     .dialogbg {
-         background: transparent;
-         border: 0px solid #fff !important;
-         border-style: none;
-     }
+    .dialogbg {
+        background: transparent;
+        border: 0px solid #fff !important;
+        border-style: none;
+    }
     .loader {
         border: 16px solid #f3f3f3;
         border-radius: 50%;
@@ -255,4 +258,6 @@
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
+
+
 </style>
