--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
     });
 
     $(document).ready(function () {
-        HighlightSelectedDate();
+
         commonUiInitialization();
         GetBGandSegmentSingleDDl();
 
@@ -107,6 +107,9 @@
             $selectSegment.chosen('destroy');
             $selectSegment.attr('multiple', 'multiple');
             $selectSegment.chosen();
+
+            $('a[data-target-id="BusinessGroups_Id"]').hide();
+            $('a[data-target-id="Segments_Id"]').show();
         }
         else if ($('#CampaignTypes').val() == 1){
             $selectSegment.chosen('destroy');
@@ -116,6 +119,9 @@
             $select.chosen('destroy');
             $select.attr('multiple', 'multiple');
             $select.chosen();
+
+            $('a[data-target-id="BusinessGroups_Id"]').show();
+            $('a[data-target-id="Segments_Id"]').hide();
         }
     }
 
@@ -165,7 +171,7 @@
 
 
         if ($("#EndDate").val() != undefined) {
-            debugger 
+             
             if ($("#EndDate").val().length > 0) {
                 if ($("#EndDate").val().indexOf(" ") > 0)
                     $("#EndDate").val($("#EndDate").val().substr(0, $("#EndDate").val().indexOf(" ")));
@@ -199,8 +205,7 @@
 
 
         manageStartEndDate();
-
-
+        HighlightSelectedDate();
         $(document).on('change', '#StartDate', function () {
             manageStartEndDate();
 
@@ -229,8 +234,7 @@
         }
     }
 
-    //Set scroll on multi select
-    $("ul.chosen-choices").css({ 'overflow': 'auto', 'max-height': '80px' });
+ 
 </script>
 <style>
     /*.ui-widget-content{border:0px solid #fff !important}*/
@@ -259,5 +263,10 @@
         100% { transform: rotate(360deg); }
     }
 
+    /*//Set scroll on multi select*/
+   ul.chosen-choices {
+        overflow: auto!important;
+        max-height: 80px;
+    }
 
 </style>
